gccida/c1/rtx_cost
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtx_cost/src/cse.c:1287:23: error: must use 'enum' tag to refer to type 'rtx_code'
int  rtx_cost( rtx x, rtx_code outer_code) 
                      ^
                      enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtx_cost/src/cse.c:1333:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v48; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtx_cost/src/cse.c:1359:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( __int64)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtx_cost/src/cse.c:1439:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v27 = mode_class_0[v26]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtx_cost/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtx_cost/src/cse.c:1533:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v15 = ( __int64)x[1]; 
                ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtx_cost/src/cse.c:1603:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v45 = ( unsigned __int16 *)x[1]; 
                           ^~~~
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtx_cost/src/obj/cse.o] Error 1
